2008-06-23  Raphael Hertzog  <hertzog@debian.org>

	* scripts/Dpkg/IPC.pm (fork_and_exec): New nocheck option that is
	forwarded to wait_child().

2008-06-23  Timothy G Abbott  <tabbott@MIT.EDU>

	* scripts/dpkg-divert.pl: Add new option --listpackage to
	dpkg-divert.
	* man/dpkg-divert.1: Document new option.

2008-06-22  Raphael Hertzog  <hertzog@debian.org>

	* man/dpkg.1, man/dpkg-query.1: Clarify lisf of packages displayed
	in dpkg --get-selections and dpkg-query -l.

2008-06-21  Raphael Hertzog  <hertzog@debian.org>

	* scripts/dpkg-shlibdeps.pl: If the binary analyzed is a library on a
	non-public path, assume it's likely a plugin and reduce the number of
	warnings displayed about symbols not found. Also use a different,
	hopefully less confusing message.
	* man/dpkg-shlibdeps.1: Document the above changes.

2008-06-21  Raphael Hertzog  <hertzog@debian.org>

	* scripts/Dpkg/Vendor.pm: Provide simple parser for vendor-specific
	information stored in /etc/dpkg/origins/. The current vendor can
	be identified through get_current_vendor() and get_vendor_info()
	retrieves the information stores within those files.
	* scripts/dpkg-buildpackage.pl: Setup the DEB_VENDOR environment
	variable if possible.
	* man/dpkg-buildpackage.1: Document the above changes.
	* scripts/Dpkg/Source/Package/V3/quilt.pm (get_series_file): Use
	get_current_vendor() to decide the name of the vendor-specific
	series file that should be used.
	* scripts/Makefile.am, scripts/po/POTFILES.in: Include the new
	module in the dist tarball and in the list of files containing
	translatable strings.

2008-06-19  Guillem Jover  <guillem@debian.org>

	* lib/varbuf.c (varbufdupc): Store the old used size instead of the
	precomputed address, as varbufextend might change the buffer from
	under us.

2008-06-17  Guillem Jover  <guillem@debian.org>

	* scripts/dpkg-divert.pl: Do not silently force --rename on --remove.

2008-06-17  Juergen Kreileder <jk@blackdown.de>,