@@ -182,6 +182,13 @@ Do not copy original tarballs near the extracted source package.
 .TP
 .BI \-\-no\-check
 Do not check signatures and checksums before unpacking.
+.TP
+.BI \-\-require\-valid\-signature
+Refuse to unpack the source package if it doesn't contain an OpenPGP
+signature that can be verified either with the user's keyring or one
+of the official Debian keyrings
+(\fI/usr/share/keyrings/debian-keyring.gpg\fP
+and \fI/usr/share/keyrings/debian-maintainers.gpg\fP).
 
 .SH SOURCE PACKAGE FORMATS
 .SS Format: 1.0
