@@ -53,6 +53,7 @@ dpkg (1.15.0) UNRELEASED; urgency=low
     They are mostly obsolete for APT users. Closes: #481185
   * Add new option --listpackage to dpkg-divert. Thanks to Timothy G Abbott
     <tabbott@MIT.EDU> for the patch. Closes: #485012
+  * Add new option --require-valid-signature to dpkg-source. Closes: #390282
 
   [ Pierre Habouzit ]
   * Add a --query option to update-alternatives. Closes: #336091, #441904
