@@ -1,5 +1,13 @@
 2008-06-23  Raphael Hertzog  <hertzog@debian.org>
 
+	* scripts/dpkg-source.pl: New option --require-valid-signature.
+	* scripts/Dpkg/Source/Package.pm (check_signature): Updated to use
+	Dpkg::IPC and to implement the checks related to
+	--require-valid-signature.
+	* man/dpkg-source.1: Document the new option.
+
+2008-06-23  Raphael Hertzog  <hertzog@debian.org>
+
 	* scripts/Dpkg/IPC.pm (fork_and_exec): New nocheck option that is
 	forwarded to wait_child().
 
